# dp11-403_exercises

./: README.md
.github/workflows/: build-host-templates.yaml
exercises/solutions/: SConscript  SConstruct  docker_run.sh
exercises/solutions/01A-Singleton/inc/: EventLog.h
exercises/solutions/01A-Singleton/src/: DateTime.cpp  EventLog.cpp  EventLogParser.cpp  main.cpp
exercises/solutions/01B-Singleton-inline/inc/: EventLog.h  EventLogParser.h
exercises/solutions/01B-Singleton-inline/src/: EventLog.cpp  EventLogParser.cpp  main.cpp
exercises/solutions/02-Network_Factory/src/: main.cpp
exercises/solutions/03-Builder/inc/: EventLog.h  EventLogParser.h  HTMLBuilder.h  I_DocBuilder.h  XMLBuilder.h
exercises/solutions/03-Builder/src/: EventLog.cpp  EventLogParser.cpp  HTMLBuilder.cpp  XMLBuilder.cpp  main.cpp
exercises/solutions/03-Builder/tests/: CMakeLists.txt  el_parser_tests.cpp
exercises/solutions/04A-Class-Adapter/inc/: MessageQueue.h
exercises/solutions/04A-Class-Adapter/src/: MessageQueue.cpp
exercises/solutions/04A-Class-Adapter/tests/: MQ_test.cpp
exercises/solutions/04B-Class-Adapter-Template/tests/: CMakeLists.txt  MQ_test.cpp
exercises/solutions/04B-Object-Adapter/: docker_run.sh
exercises/solutions/04B-Object-Adapter/tests/: CMakeLists.txt  MQ_test.cpp
exercises/solutions/04C-Object-Adapter/: SConstruct
exercises/solutions/05-Decorator/inc/: AltitudeDecorator.h  Decorator.h  SymbolDecorator.h  Waypoint.h
exercises/solutions/06-Bridge/inc/: Client.h  (+7 more)
exercises/solutions/09-Thread-Runs-Polymorphic-Object/: SConscript
exercises/solutions/10-Scope-locked-idiom/: SConstruct
exercises/solutions/11-Monitor/: SConstruct
exercises/solutions/12-Asynchronous-message/: SConstruct
exercises/solutions/99-State/: SConstruct
(+105 files in other folders)
